--- a/style.css
+++ b/style.css
@@ -1,69 +1,90 @@
 body {
   height: 100%;
-  background-color: pink;
+  background-color: slategray;
 }
 
 /* overall game panel */
 #gamePanel {
   height: 500px;
   width: 550px;
-  background-color: steelblue;
+  background-color: #908470;
   margin: 25% auto;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 4px 4px 4px slategrey;
+  box-shadow: 4px 4px 4px #907470;
   position: relative;
 }
 
 /* box that will record the players score */
 #score {
-  background: yellow;
+  background: #709080;
   padding: 11px;
   border-radius: 10px;
-  margin: 20px auto;
   max-width: fit-content;
+  position: absolute;
+  left: 80px;
+  bottom: 72px;
+  box-shadow: 4px 4px 4px slategrey;
 }
 
 /* section that will display the problem */
 #display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width:80%;
   height: 40%;
-  background-color: turquoise;
+  background-color: #787090;
   margin: 20px auto;
   border-radius: 10px;
-  transition: ease-in-out 0.2s;
-  text-align: center;
+  transition: ease-in 0.2s;
+  box-shadow: 4px 4px 4px #708090;
 }
 
 #display h2 {
-  padding-top: 15%;
+  font-size: 3rem;
 }
 
 /* formatting the choice buttons */
 #answers {
-  margin-left: 65px;
+  /* margin-left: 65px; */
+  display: inline-flex;
 }
 .choices {
   width: 100px;
   height: 100px;
   border-radius: 10px;
   padding: auto;
+  margin-left: 30px;
+  cursor: pointer;
+  text-align: center;
+  line-height: 95px;
+  background-color: #787090;
+  box-shadow: 4px 4px 4px #708090;
+  transition: all 0.2s;
 }
 
 /* formatting for reset button */
 #startReset {
-  padding-top: 5px;
+  padding: 10px;
   border-radius: 10px;
   margin: 10px 225px;
+  cursor: pointer;
+  background-color: #787090;
+  border-style: none;
+  box-shadow: 4px 4px 4px #708090;
 }
 
 /* formatting the time remaining */
 #timeRemaining {
-  background: limegreen;
+  background: #709080;
+  transition: ease-in-out 0.2s;
   padding: 10px;
   border-radius: 10px;
   position: absolute;
-  left: 400px;
+  left: 350px;
+  bottom: 72px;
+  box-shadow: 4px 4px 4px slategrey;
 }
 
 /* overall styling for buttons:hover */
@@ -71,7 +92,10 @@ button {
   transition: ease-in-out 0.2s;
 }
 
-button:hover {
+#startReset:hover {
   background-color: mediumaquamarine;
-  border: 2px solid aquamarine;
+}
+
+.choices:hover {
+  background-color: mediumaquamarine;
 }
