--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
   height: 100%;
   background-color: slategray;
+  text-align: center;
+  overflow: hidden;
 }
+
 
 /* overall game panel */
 #gamePanel {
@@ -23,7 +26,7 @@ body {
   max-width: fit-content;
   position: absolute;
   left: 80px;
-  bottom: 72px;
+  bottom: 40px;
   box-shadow: 4px 4px 4px slategrey;
 }
 
@@ -55,7 +58,7 @@ body {
   height: 100px;
   border-radius: 10px;
   padding: auto;
-  margin-left: 30px;
+  margin: 10px;
   cursor: pointer;
   text-align: center;
   line-height: 95px;
@@ -83,7 +86,7 @@ body {
   border-radius: 10px;
   position: absolute;
   left: 350px;
-  bottom: 72px;
+  bottom: 40px;
   box-shadow: 4px 4px 4px slategrey;
 }
 
